cabal-version:      3.0
name:               wxyzmonad
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Nishant Rodrigues
maintainer:         nishantjr@gmail.com
-- copyright:
category:           Graphics
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    hs-source-dirs:   .
    exposed-modules:  WXYZ.Wayland
    include-dirs:     .build/protocol/,
                      .
    c-sources:        cbits/river.c,
                      .build/protocol/river-window-management-v1-private.c,
                      .build/protocol/river-xkb-bindings-v1-private.c
    pkgconfig-depends:
      , wayland-client
      , xkbcommon
    build-depends:    base >=4.18.3.0 && < 5,
    default-language: GHC2021

executable wxyz
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base >=4.18.3.0 && < 5,
        wxyzmonad
    hs-source-dirs:   exe
    default-language: GHC2021
