cabal-version:      3.0
name:               wxyzmonad
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Nishant Rodrigues
maintainer:         nishantjr@gmail.com
-- copyright:
category:           Graphics
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    hs-source-dirs:   src/
    exposed-modules:  WXYZ.Protocol
                    , WXYZ.XKB
                    , WXYZ.River
                    , XMonad.Core
                    , XMonad.Layout
                    , XMonad.StackSet
    include-dirs:     .build/protocol/,
                      .
    c-sources:        cbits/river.c
                    , .build/protocol/river-window-management-v1-private.c
                    , .build/protocol/river-xkb-bindings-v1-private.c
                    , .build/protocol/river-layer-shell-v1-private.c
    pkgconfig-depends:
      , wayland-client
      , xkbcommon
    build-depends:    base >=4.18.3.0 && < 5
                    , containers
                    , data-default-class
                    , directory
                    , extra
                    , filepath
                    , mtl
                    , process
                    , time
                    , transformers
                    , unix
    default-language: GHC2021

executable wxyz
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base >=4.18.3.0 && < 5
      , containers
      , wxyzmonad
    hs-source-dirs:   exe
    default-language: GHC2021

test-suite unit-test
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs:
      unit-test
  build-depends:
      wxyzmonad
    , tasty
    , tasty-hunit
    , base
  default-language: GHC2021
